# skillsmp-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  skillsmp-mcp-PRD.md
src/skillsmp_mcp/: __init__.py  __main__.py  config.py  github.py  installer.py  scanner.py  server.py  skillsmp_api.py
tests/: test_config.py  test_formatting.py  test_github.py  test_installer.py  test_scanner.py  test_server_tools.py  test_skillsmp_api.py
